[package]
name = "low_latency_oms"
version = "0.1.0"
edition = "2021"

[dependencies]

# For Async runtime
tokio = { version = "1", features = ["full"] }

# For the web framework
axum = "0.7" # Use a recent version of axum

# For easy JSON handling in API requests/responses (we'll need it soon)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For tracing/logging (good practice for servers)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }